force-app/main/default/objects/ZohoSign_Master_Settings__c/ZohoSign_Master_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ZohoSign Master Settings</label>
</CustomObject>