force-app/main/default/objects/ZohoSign_Master_Settings__c/fields/Access_Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Endpoint__c</fullName>
    <label>Access Token Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>