force-app/main/default/objects/ZohoSign_Master_Settings__c/fields/MSA_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>MSA_Template_Id__c</fullName>
    <label>MSA Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>