force-app/main/default/objects/ZohoSign_Master_Settings__c/fields/NDA_Action_Id__c.field-meta.xml
<CustomField>
    <fullName>NDA_Action_Id__c</fullName>
    <label>NDA Action Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>