force-app/main/default/objects/ZohoSign_Master_Settings__c/fields/NDA_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>NDA_Template_Id__c</fullName>
    <label>NDA Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>